# 675_LAW

./: .gitignore  README.md  chatbot_app.py  chatbot_test.ipynb  neo4j-langchain-streamlit-app.py  pyproject.toml  read.py
.streamlit/: config.toml  secrets.toml
data/clean/: capitulos_1.csv  enlaces_tutelas_sentencias.csv  q-0-132.csv  q-133-216.csv  q-217-910.csv  relaciones_sentencias_articulos.csv  sentencias.csv  titulos_2.csv  tutelas.csv
data/raw/Sentencias/: C-318-02.rtf  C-738-02.rtf  C-782-04.rtf  SU509-01.rtf
data/raw/ok_q/: q-anexas.csv
notebooks/: 01_data_prossesing.ipynb  01_eda.ipynb  02_sentencias_procesamiento.ipynb  03_app_chatbot.ipynb  04_langchain_gemma.ipynb  05_embedings.ipynb  06_questions_generator.ipynb  07_Articles_Selection.ipynb  08_article_content_selection.ipynb  08_question_integration.ipynb  09_answer_generation.ipynb  articulos.csv  articulos_0-132.csv  articulos_217-910.csv  chatbot_app.py  enlaces_capitulo_articulo.csv  enlaces_e4.csv  gemma-kaggle-streamlit.py  preguntas_articulos_enlace.csv  preguntas_articulos_nodos.csv  titulos.csv
src/: neo4j_functions.py
