[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Javier <7.matute@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
matplotlib = "^3.9.2"
jupyter = "^1.1.1"
fastparquet = "^2024.5.0"
seaborn = "^0.13.2"
langchain = "^0.2.16"
python-dotenv = "^1.0.1"
langchain-community = "^0.2.16"
langchain-openai = "^0.1.23"
wordcloud = "^1.9.3"
nltk = "^3.9.1"
docx = "^0.2.4"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
